app2/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: spring-petclinic-2
  name: spring-petclinic-2
spec:
  port:
    targetPort: 8081-tcp
  to:
    kind: Service
    name: spring-petclinic-2 
    weight: 100
